@@ -74,89 +74,4 @@ __divulong_rrx_s::
 __divulong_rrf_s::
         jp      __divulong
 
-__mulint_rrf_s::
-        ld      a,#5
-        rst     0x08
-        jp	__mulint_rrx_s
-
-__divsint_rrf_s::
-        ld      a,#5
-        rst     0x08
-        jp	__divsint_rrx_s
-
-__divuint_rrf_s::
-        ld      a,#5
-        rst     0x08
-        jp	__divuint_rrx_s
-
-__mulschar_rrf_s::
-        ld      a,#5
-        rst     0x08
-        jp	__mulschar_rrx_s
-
-__divschar_rrf_s::
-        ld      a,#5
-        rst     0x08
-        jp	__divschar_rrx_s
-
-__modschar_rrf_s::
-        ld      a,#5
-        rst     0x08
-        jp	__modschar_rrx_s
-
-__muluchar_rrf_s::
-        ld      a,#5
-        rst     0x08
-        jp	__muluchar_rrx_s
-
-__divuchar_rrf_s::
-        ld      a,#5
-        rst     0x08
-        jp	__divuchar_rrx_s
-
-__moduchar_rrf_s::
-        ld      a,#5
-        rst     0x08
-        jp	__moduchar_rrx_s
-
-__mulsuchar_rrf_s::
-        ld      a,#5
-        rst     0x08
-        jp	__mulsuchar_rrx_s
-
-__divsuchar_rrf_s::
-        ld      a,#5
-        rst     0x08
-        jp	__divsuchar_rrx_s
-
-__modsuchar_rrf_s::
-        ld      a,#5
-        rst     0x08
-        jp	__modsuchar_rrx_s
-
-__muluschar_rrf_s::
-        ld      a,#5
-        rst     0x08
-        jp	__muluschar_rrx_s
-
-__divuschar_rrf_s::
-        ld      a,#5
-        rst     0x08
-        jp	__divuschar_rrx_s
-
-__moduschar_rrf_s::
-        ld      a,#5
-        rst     0x08
-        jp	__moduschar_rrx_s
-
-__modsint_rrf_s::
-        ld      a,#5
-        rst     0x08
-        jp	__modsint_rrx_s
-
-__moduint_rrf_s::
-        ld      a,#5
-        rst     0x08
-        jp	__moduint_rrx_s
-
 
